Add Binder link

--- a/corona.ipynb
+++ b/corona.ipynb
@@ -2,19 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install pandas\n",
+    "\n",
     "import pandas as pd\n",
     "from datetime import datetime"
    ]
